# schelling_coordination

./: .gitignore  README.md  eval_configs.py  model_specific_configs.py  prompts.py  pyproject.toml  quick_stats.py  run_all.py  run_eval.py  run_example_batch.sh  schelling_pairs_task.py
data/: mundane_vs_dangerous_elo.json  random_emoji.json  random_mixed_types.json  salient_vs_alphabetical_elo.json  salient_vs_alphabetical_elo_pilot20.json  test_5.json
data/dataset_development/: analyze_separation.py  common_emojis.py  comparison_report.py  datasets.py  elo_calculator.py  elo_constants.py  emoji_list.py  generate_random_emoji.py  generate_random_mix.py  llm_utils.py  match_manager.py  multi_model_elo.py  option_breakdown.json  run_comparison.py  run_elo.py  selected_words.json  verify_datasets.py  verify_swapped_datasets.py
data_export/: run_export.py
data_export/analyses/: __init__.py  alphabetisation_all_converged.py  anti_coordination.py  (+8 more)
scorers/: __init__.py  openai_reasoning_grader.py  validation_scorer.py
scripts/: add_post_hoc_explanations.py
solvers/: __init__.py  post_hoc_explanation_solver.py
strategy_investigation/: CATEGORIZATION_GUIDELINES.md  categorize_post_hoc_explanations.py  categorize_strategies_csv.py  post_hoc_explanation_scorer.py  rescore_eval.py  run_justification_collector.py  run_post_hoc_analysis.py  strategy_categorizations.csv  strategy_extraction_task.py  strategy_name_extractor_scorer.py  test_enhanced_categorization.py
utils/: __init__.py  comparison.py  dataset_builder.py  eval_results.py  hash_utils.py  model_utils.py
(+342 files in other folders)
